--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,12 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" >
+<div fxLayout fxLayoutGap = "20px">
 <span><img src="/assets/images/logo.png" height=30 width=41></span>
-<a mat-button><span class="fa fa-home fa-lg"></span> Home</a>
-<a mat-button><span class="fa fa-info fa-lg"></span> About</a>
-<a mat-button><span class="fa fa-list fa-lg"></span> Menu</a>
+
+<a mat-button fxFlex><span class="fa fa-home fa-lg"></span> Home</a>
+<a mat-button fxFlex><span class="fa fa-info fa-lg"></span> About</a>
+<a mat-button fxFlex><span class="fa fa-list fa-lg"></span> Menu</a>
 <a mat-button><span class="fa fa-address-card fa-lg"></span> Contact</a>
+</div>
 </mat-toolbar>
 
 <div class="container jumbotron"
