--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,9 +2,9 @@
 <div fxLayout fxLayoutGap = "20px">
 <span><img src="/assets/images/logo.png" height=30 width=41></span>
 <div class="example-button-row ">
-<a mat-button fxFlex><span class="fa fa-home fa-lg"></span> Home</a>
+<a mat-button fxFlex routerLink = "/home"><span class="fa fa-home fa-lg"></span> Home</a>
 <a mat-button fxFlex><span class="fa fa-info fa-lg"></span> About</a>
-<a mat-button fxFlex><span class="fa fa-list fa-lg"></span> Menu</a>
+<a mat-button fxFlex routerLink="/menu"><span class="fa fa-list fa-lg"></span> Menu</a>
 <a mat-button><span class="fa fa-address-card fa-lg"></span> Contact</a></div>
 </div>
 </mat-toolbar>
