--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,30 +1,31 @@
-<mat-toolbar color="primary" >
-<div fxLayout fxLayoutGap = "20px">
-<span><img src="/assets/images/logo.png" height=30 width=41></span>
-<div class="example-button-row ">
-<a mat-button fxFlex routerLink = "/home" routerLinkActive="active"><span class="fa fa-home fa-lg"></span> Home</a>
-<a mat-button fxFlex routerLink = "/about" routerLinkActive="active"><span class="fa fa-info fa-lg"></span> About</a>
-<a mat-button fxFlex routerLink="/menu" routerLinkActive="active"><span class="fa fa-list fa-lg"></span> Menu</a>
-<a mat-button routerLink="/contactus" routerLinkActive="active"><span class="fa fa-address-card fa-lg"></span> Contact</a></div>
-</div>
+<mat-toolbar color="primary">
+  <div fxLayout fxLayoutGap="20px">
+    <span><img src="/assets/images/logo.png" height=30 width=41></span>
+    <div class="example-button-row ">
+      <a mat-button fxFlex routerLink="/home" routerLinkActive="active"><span class="fa fa-home fa-lg"></span> Home</a>
+      <a mat-button fxFlex routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-lg"></span>
+        About</a>
+      <a mat-button fxFlex routerLink="/menu" routerLinkActive="active"><span class="fa fa-list fa-lg"></span> Menu</a>
+      <a mat-button routerLink="/contactus" routerLinkActive="active"><span class="fa fa-address-card fa-lg"></span>
+        Contact</a>
+    </div>
+    <span class="flex-spacer"></span>
+    <a mat-button (click)="openLoginForm()"><span class="fa fa-sign-in fa-lg"></span> Login</a>
+  </div>
 </mat-toolbar>
 
-<div class="container jumbotron"
-  fxLayout="row"
-  fxLayout.sm="column" 
-  fxLayout.xs="column" 
-  fxLayoutAlign.xs="start center"
-  fxLayoutAlign.sm="start center" 
-  fxLayoutAlign.gt-sm="center center" 
+<div class="container jumbotron" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column"
+  fxLayoutAlign.xs="start center" fxLayoutAlign.sm="start center" fxLayoutAlign.gt-sm="center center"
   fxLayoutGap="10px">
 
-<div fxFlex fxFlex.gt-sm="50%">
-  <h1>Ristorante Con Fusion</h1>
-  <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations
-    will tickle your culinary senses!</p>
-</div>
-<div fxFlex fxFlex.gt-sm="20%">
-  <img src="/assets/images/logo.png" alt="Logo">
-</div>
-<div fxFlex></div>
+  <div fxFlex fxFlex.gt-sm="50%">
+    <h1>Ristorante Con Fusion</h1>
+    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking
+      creations
+      will tickle your culinary senses!</p>
+  </div>
+  <div fxFlex fxFlex.gt-sm="20%">
+    <img src="/assets/images/logo.png" alt="Logo">
+  </div>
+  <div fxFlex></div>
 </div>
